Test/add-check-coverage-greater-than-70 (#37)
* ci: Add continue-on-error for Snyk analysis in CI workflows

* Test: add check coverage

* Test: add unit test for service webhook

---------

Co-authored-by: NTTH7419 <98406395+NTTH7419@users.noreply.github.com>